Wrapped everything in Landing.js in a container to make it all responsive to screen size. Also added a container for buttons but didn't work. Switched Navbar to normal not navbar-fixed. SEP logo too far back

--- a/src/Components/Styles/Navbar.css
+++ b/src/Components/Styles/Navbar.css
@@ -10,10 +10,11 @@ nav {
   height: 175px;
   width: 175px;
   color: white !important;
+  z-index: 5;
   /*border-radius: 50%; */
   float: left !important;
   opacity: 1 !important;
   border: none;
-  margin-left: -800px;
+  margin-left: -400px;
   margin-top: -15px;
 }
